# 25-REA-CMP_garo-speech-recognition

./: LICENSE  README.md  pyproject.toml
dat/AIR/transcripts/: Garo_Shillong_2025-05-15_1805.txt
src/: get-bulletins.py
